divide equally indicator View, add search icon by RelativeLayout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,37 @@
     android:layout_height="match_parent"
     tools:context="com.cvte.ximalaya.MainActivity">
 
-    <!--根据图片定大小-->
-    <net.lucode.hackware.magicindicator.MagicIndicator
-        android:id="@+id/main_indicator"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:background="@color/colorBackgroundRed">
+
+        <!--根据设计的图片定大小-->
+        <net.lucode.hackware.magicindicator.MagicIndicator
+            android:id="@+id/main_indicator"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="match_parent"/>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <!--给个相对布局使搜索图片在权重为1的相对布局中居中显示-->
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/search_icon"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
