--- a/app/src/main/res/layout/fragment_recommand.xml
+++ b/app/src/main/res/layout/fragment_recommand.xml
@@ -4,10 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="推荐界面"
-        android:textSize="30sp"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recommend_list"
+        android:background="#F4F4F4"
+        android:overScrollMode="never">
+
+
+    </android.support.v7.widget.RecyclerView>
+
+
 </RelativeLayout>
