--- a/app/src/main/res/layout/fragment_network_error.xml
+++ b/app/src/main/res/layout/fragment_network_error.xml
@@ -4,10 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/network_error_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="网络错误，点击屏幕重试.."
-        android:layout_centerInParent="true"/>
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@mipmap/network_error"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="网络错误，点击屏幕重试.."
+            android:layout_marginTop="9dp"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
