--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,12 +2,72 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#0f0ff0">
 
-    <TextView
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:id="@+id/iv_large_cover"
+        android:background="#00ff00"
+        android:scaleType="fitXY"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/iv_large_cover"
+        android:background="@color/colorWhite">
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="14dp"
+            android:background="@drawable/shape_subscription_bg"
+            android:text="+ 订阅"
+            android:textColor="@color/colorWhite"
+            android:gravity="center"/>
+    </RelativeLayout>
+
+    <com.cvte.ximalaya.views.RoundRectImageView
+        android:id="@+id/iv_small_cover"
+        android:layout_height="75dp"
+        android:layout_width="75dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="-40dp"
+        android:background="#00ffff"
+        android:layout_below="@id/iv_large_cover"
+        android:scaleType="fitXY"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="这是详情界面"/>
+        android:orientation="vertical"
+        android:layout_below="@id/iv_large_cover"
+        android:layout_marginTop="-30dp"
+        android:layout_toRightOf="@id/iv_small_cover"
+        android:layout_marginLeft="20dp">
+
+        <TextView
+            android:id="@+id/tv_album_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#ffffff"
+            android:text="标题"/>
+
+        <TextView
+            android:id="@+id/tv_album_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="12sp"
+            android:textColor="#979797"
+            android:text="作者"/>
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
