--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0f0ff0">
+    android:background="#E8E8E8">
 
     <ImageView
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         android:scaleType="fitXY"/>
 
     <RelativeLayout
+        android:id="@+id/subscription"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/iv_large_cover"
@@ -28,6 +29,50 @@
             android:text="+ 订阅"
             android:textColor="@color/colorWhite"
             android:gravity="center"/>
+    </RelativeLayout>
+    
+    
+    <RelativeLayout
+        android:id="@+id/play_control_container"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/subscription"
+        android:background="#E8E8E8">
+
+        <ImageView
+            android:id="@+id/detail_play_control"
+            android:layout_centerVertical="true"
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/play_black_normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="继续播放"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="12dp"
+            android:textSize="14dp"
+            android:layout_toRightOf="@+id/detail_play_control"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="4dp"
+            android:layout_toLeftOf="@+id/detail_arrow"
+            android:text="选集"/>
+
+        <ImageView
+            android:id="@+id/detail_arrow"
+            android:layout_width="16dp"
+            android:layout_height="8dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="18dp"
+            android:src="@mipmap/arrow_icon"/>
+
     </RelativeLayout>
 
     <com.cvte.ximalaya.views.RoundRectImageView
@@ -68,6 +113,14 @@
 
     </LinearLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/album_detail_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/play_control_container">
+
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </RelativeLayout>
