--- a/app/src/main/res/layout/player_activity.xml
+++ b/app/src/main/res/layout/player_activity.xml
@@ -87,6 +87,7 @@
                 android:src="@mipmap/previous_normal"/>
 
             <ImageView
+                android:id="@+id/play_or_stop_btn"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
