--- a/app/src/main/res/layout/player_activity.xml
+++ b/app/src/main/res/layout/player_activity.xml
@@ -50,14 +50,15 @@
                 android:textSize="16sp"/>
 
             <SeekBar
+                android:id="@+id/player_progress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:max="100"/>
+                android:layout_marginRight="50dp" />
 
             <TextView
+                android:id="@+id/totalTime"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -81,6 +82,7 @@
                 android:src="@mipmap/sort_descending_normal"/>
 
             <ImageView
+                android:id="@+id/play_pre"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
@@ -94,6 +96,7 @@
                 android:src="@mipmap/play_normal"/>
 
             <ImageView
+                android:id="@+id/play_next"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
