--- a/app/src/main/res/layout/player_activity.xml
+++ b/app/src/main/res/layout/player_activity.xml
@@ -104,10 +104,11 @@
                 android:src="@drawable/selector_player_next"/>
 
             <ImageView
+                android:id="@+id/player_list"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
-                android:src="@mipmap/player_icon_list_normal"/>
+                android:src="@drawable/selector_player_icon_list"/>
 
         </LinearLayout>
 
