--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackgroundRed">#FF0050</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGravy">#555555</color>
+
 </resources>
