--- a/app/src/main/res/layout/pop_play_list.xml
+++ b/app/src/main/res/layout/pop_play_list.xml
@@ -6,16 +6,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/play_list_control_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal">
 
+        <LinearLayout
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/player_list_play_mode_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/selector_player_mode_list_order" />
+
+            <TextView
+                android:layout_marginLeft="6dp"
+                android:id="@+id/play_list_play_mode_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="顺序播放" />
+
+        </LinearLayout>
 
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/play_list_order_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal"
+            android:layout_marginRight="10dp">
+
+
+            <ImageView
+                android:id="@+id/play_list_order_iv"
+                android:layout_width="20dp"
+                android:src="@drawable/selector_player_mode_list_order"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:layout_marginLeft="6dp"
+                android:id="@+id/play_list_order_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="顺序" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/play_list_recycler"
