--- a/app/src/main/res/layout/itme_detail_list.xml
+++ b/app/src/main/res/layout/itme_detail_list.xml
@@ -2,15 +2,17 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/album_detail_list"
+
+    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/album_detail_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-
-
-
-
+    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
 
 </FrameLayout>
