feature: mainActivity add bottom title

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,56 @@
         android:overScrollMode="never"/>
     <!--android:overScrollMode="never" 滑动到边框时不会出现颜色边-->
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#ffffff"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        
+        <com.cvte.ximalaya.views.RoundRectImageView
+            android:id="@+id/track_cover"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="5dp"
+            android:src="@mipmap/ximalay_logo"/>
+
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/track_little_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="大标题"
+                android:textColor="#444444"
+                android:textSize="18sp"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"/>
+
+            <TextView
+                android:id="@+id/track_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="作者"
+                android:textColor="#9d9d9d"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+
+         <ImageView
+             android:id="@+id/sub_play_control"
+             android:layout_width="35dp"
+             android:layout_height="35dp"
+             android:src="@drawable/selector_player_play"
+             android:layout_marginRight="10dp"
+             android:layout_gravity="center_vertical"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
