add FlowTextLayout; come true UILoader

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -51,4 +51,9 @@
         android:layout_height="match_parent"/>
 
 
+    <!--<com.cvte.ximalaya.views.FlowTextLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_margin="10dp"-->
+        <!--android:id="@+id/flow_text_layout" />-->
 </LinearLayout>
