--- a/app/src/main/res/layout/dialog_check_box_confirm.xml
+++ b/app/src/main/res/layout/dialog_check_box_confirm.xml
@@ -22,7 +22,7 @@
 
             
        <CheckBox
-
+            android:id="@+id/checkbox_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
